--- a/generators/mobile/templates/_config.json
+++ b/generators/mobile/templates/_config.json
@@ -8,5 +8,5 @@
 	"bower_components": "/bower_components",
 	"version": "<%= version %>",
 	"sprite_padding": 20,
-	"bower_source": ["./bower_components/jquery/dist/jquery.min.js", "./bower_components/html5shiv/dist/html5shiv.min.js", "./bower_components/respond/dest/respond.min.js"]
+	"jsPath": []
 }
