--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "generator-frontman",
-  "version": "0.2.4",
+  "version": "0.3.0",
   "description": "Yeoman generator",
   "license": "MIT",
   "main": "app/index.js",
@@ -21,6 +21,7 @@
   "dependencies": {
     "chalk": "^1.0.0",
     "html-wiring": "^1.2.0",
+    "replace": "^0.3.0",
     "yeoman-generator": "^0.19.0",
     "yosay": "^1.0.2"
   },
