模板增加requirejs方式

--- a/generators/app/templates/_config.json
+++ b/generators/app/templates/_config.json
@@ -8,7 +8,7 @@
 	"bower_components": "/bower_components",
 	"version": "<%= version %>",
 	"sprite_padding": 20,
-	"bower_source": ["./bower_components/jquery/dist/jquery.min.js", "./bower_components/html5shiv/dist/html5shiv.min.js", "./bower_components/respond/dest/respond.min.js"],
+	"bower_source": ["./bower_components/jquery/dist/jquery.min.js", "./bower_components/html5shiv/dist/html5shiv.min.js", "/bower_components/es5-shim/es5-shim.min.js", "./bower_components/respond/dest/respond.min.js", "./bower_components/frontui/js/ui.js", "./bower_components/requirejs/require.js"],
   "docs": {
     "port": 5432,
     "srcPath": "./doc",
